--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,9 @@
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
     "sass": "^1.79.5",
+    "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.14.5",
+    "sweetalert2-react-content": "^5.0.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
